syntax = "proto3";

option csharp_namespace = "ProjectLibrary.Client.User";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

package userproto;

service UserService {
  rpc AuthorizeUser (RequestAuthorize) returns (ResponseAuthorize);
  rpc RegisterUser (RequestRegister) returns (ResponseRegister);
  rpc CheckUniqueField (RequestCheckUnique) returns (ResponseCheckUnique);
}

message RequestAuthorize{
	string login = 1;
	string password_hash = 2;
}

message ResponseAuthorize {
	int32 id = 1;
	string first_name = 2;
	string second_name = 3;
	string patronomyc_name = 4;
	repeated FavoriteGenre favorite_genres = 5;
}
message FavoriteGenre{
	google.protobuf.Int32Value genre_id = 1;
	google.protobuf.StringValue genre_name = 2;
	google.protobuf.Int32Value clicked_countity = 3;
}

message RequestRegister{
	string first_name = 1;
	string second_name = 2;
	string patronomyc_name = 3;
	string email = 4;
	string login = 5;
	string password_hash = 6;
	google.protobuf.Timestamp birthday_date = 7;
}

message ResponseRegister{
	bool is_success = 1;
}

message RequestCheckUnique{
	string valid_string_login = 1;
	string valid_string_email = 2;
}

message ResponseCheckUnique{
	bool login_is_unique = 1;
	bool email_is_unique = 2;
}